# smith

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  LAYOUT_PATTERNS.md  LICENSE  README.md  WEB-AGENT.md  WEB-FIX.md  instr.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/selector-capture/: Cargo.toml
apps/smith-context/: Cargo.toml
apps/smith-examples/: Cargo.toml
apps/smith-examples/examples/: agent_graph.rs  agent_notepad.rs  approval_workflow.rs  flowgraph_notepad.rs  multi_agent.rs  persistent_graph.rs  rpa_basic.rs  rpa_notepad.rs  rpa_with_agent.rs  rpa_with_ai.rs  simple_agent.rs  smith_bridge.rs  streaming.rs  workflow_notepad.rs
crates/smith-agent/: Cargo.toml
crates/smith-ai/: Cargo.toml
crates/smith-ai/src/: adapter.rs  agent.rs  lib.rs  provider.rs
crates/smith-cli/: Cargo.toml
crates/smith-core/: Cargo.toml
crates/smith-mcp/: Cargo.toml
crates/smith-providers/: Cargo.toml
crates/smith-rpa/: Cargo.toml
crates/smith-server/: Cargo.toml
crates/smith-windows/: Cargo.toml
crates/smith-workflow/: Cargo.toml
docs/adr/: ADR-0001.md  ADR-0002.md
praxis-data/: episodic.db-shm  episodic.db-wal  registry.json
smith-graphify/: .graphify_manifest.json  GRAPH_REPORT.md  graph.cypher  graph.graphml  graph.html  graph.json
smith-graphify/html/: community_0.html  community_1.html  community_10.html  community_11.html  community_12.html  community_13.html  community_14.html  community_15.html  community_2.html  community_3.html  community_4.html  community_5.html  community_6.html  community_7.html  community_8.html  community_9.html  index.html
smith-graphify/obsidian/: Cli.md  ClickTool.md  ContextValue.md  ExecutionContext.md  FileEntry.md  GraphifyArtifacts.md  MarkdownContext.md  ProjectStats.md  SafeUIElement.md  SmithError.md  Tool.md  TreeNode.md  _clone__.md  _default___0.md  _default___1.md  _description__.md  _execute__.md  _get__.md  _inner__.md  _name__.md  _new___0.md  _new___1.md  _new___2.md  _pop_scope__.md  _push_scope__.md  _schema__.md  _set__.md  _try_as_boolean__.md  _try_as_custom__.md  _try_as_number__.md  _try_as_string__.md  anyhow__Result.md  async_trait__async_trait_0.md  async_trait__async_trait_1.md  build_env_info__.md  build_git_log__.md  build_graph__.md  build_stats__.md  build_tree__.md  chrono__Local.md  (+48 more)
smith-graphify/wiki/: apps_smith_context_src_main_rs.md  apps_smith_context_src_main_rs_collect_files.md  apps_smith_context_src_main_rs_main.md  community_0.md  community_1.md  community_10.md  community_11.md  community_12.md  community_13.md  community_14.md  community_15.md  community_2.md  community_3.md  community_4.md  community_5.md  community_6.md  community_7.md  community_8.md  community_9.md  crates_smith_core_src_context_rs.md  crates_smith_core_src_context_rs_contextvalue.md  crates_smith_core_src_context_rs_executioncontext.md  crates_smith_core_src_tool_rs.md  crates_smith_windows_src_element_rs_safeuielement.md  crates_smith_windows_src_tools_click_rs.md  crates_smith_windows_src_tools_click_rs_clicktool.md  index.md
(+108 files in other folders)
