[workspace]
resolver = "3"
members = [
    "apps/selector-capture",
    "apps/smith-examples",
    "crates/smith-core",
    "crates/smith-windows",
    "crates/smith-rpa",
    "crates/smith-ai",
    "crates/smith-workflow",
    "crates/smith-agent",
    "crates/smith-providers",
    "crates/smith-mcp",
    "crates/smith-observe",
    "crates/smith-server",
    "crates/smith-cli",
]

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1.38", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
futures = "0.3"
wiremock = "0.6"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
