[package]
name = "smith-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
smith-core = { path = "../../crates/smith-core" }
smith-windows = { path = "../../crates/smith-windows" }
smith-workflow = { path = "../../crates/smith-workflow" }
smith-ai = { path = "../../crates/smith-ai" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
rig = { workspace = true }
tracing = { workspace = true }
