[package]
name = "smith-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
smith-agent = { path = "../../crates/smith-agent" }
smith-core = { path = "../../crates/smith-core" }
smith-providers = { path = "../../crates/smith-providers" }
smith-windows = { path = "../../crates/smith-windows" }
smith-ai = { path = "../../crates/smith-ai" }
smith-workflow = { path = "../../crates/smith-workflow" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
dotenvy = "0.15"
