[package]
name = "smith-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[dependencies]
smith-agent = { path = "../smith-agent" }
smith-providers = { path = "../smith-providers" }
smith-mcp = { path = "../smith-mcp" }
async-trait = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
